# suburi-embedded-rust

.devcontainer/: Dockerfile  devcontainer.json
boid/: Cargo.toml
boid/examples/: sim.rs
boid/src/: lib.rs
eg-playground/: Cargo.toml
eg-playground/examples/: draw_wio_splash.rs  line.rs
wio-examples/: Cargo.toml
wio-examples/examples/: 6-2-led_and_button.rs  6-3-echo.rs  6-4-timer_busy_wait.rs  6-4-timer_interrupt.rs  6-5-buzzer_pwm.rs  6-5-buzzer_simple.rs  6-6-light_sensor.rs  6-7-accelerometer_serial.rs  6-7-i2c_read_device_id.rs  7-3-spi_read_display_power_mode.rs  7-4-hello_lcd.rs  7-4-splash.rs  8-1-stop_watch.rs  8-2-mic_fft.rs  boid-app.rs
wio_splash/: Cargo.toml
wio_splash/src/: lib.rs
