[package]
name = "boid"
version = "0.1.0"
authors = ["Shinya Ishikawa <ishikawa.s.1027@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
micromath = "1.1.1"
embedded-graphics = "0.6.2"
rand = { version = "0.7.3", default_features = false, features = ["small_rng"] }
embedded-graphics-simulator = { version = "0.2.1", optional = true }

[features]
sim = ["embedded-graphics-simulator"]
# embedded-graphics-simulator = "0.2.1"

[[example]]
name = "sim"
required-features = ["sim"]
